# OLD-qalculate-gtk

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  xmldocs.make
data/: .cvsignore  Makefile.am  about.glade  argumentrules.glade  csvexport.glade  csvimport.glade  datasetedit.glade  datasets.glade  decimals.glade  functionedit.glade  functions.glade  main.glade  matrix.glade  matrixedit.glade  namesedit.glade  nbases.glade  nbexpression.glade  periodictable.glade  plot.glade  precision.glade  preferences.glade  qalculate-gtk.desktop.in  qalculate.cfg  qalculate.desktop.in  qalculate.glade  setbase.glade  unit.glade  unitedit.glade  units.glade  unknownedit.glade  variableedit.glade  variables.glade
doc/C/: Makefile.am  appendixa.xml  appendixb.xml  appendixc.xml  qalculate-C.omf  qalculate-gtk-C.omf  qalculate-gtk.xml  qalculate.xml
doc/C/figures/: calculator-buttons.dia  mainwindow.dia
po/: .cvsignore  POTFILES.in  de.po  en_US.po  nl.po  qalculate-gtk.pot  sv.po
po-defs/: .cvsignore  Makefile.am  POTFILES.in  sv.po
src/: .cvsignore  Makefile.am  callbacks.cc  callbacks.h  cmdline.c  defs2doc.cc  interface.cc  interface.h  main.cc  main.h  qalc.cc  support.c  support.h
src/calclib/: .cvsignore  BuiltinFunctions.cc  BuiltinFunctions.h  Calculator.cc  Calculator.h  DataCollection.cc  DataCollection.h  DataSet.cc  DataSet.h  EqItem.cc  EqItem.h  Error.cc  Error.h  ExpressionItem.cc  ExpressionItem.h  Fraction.cc  Fraction.h  Function.cc  Function.h  Integer.cc  Integer.h  Makefile.am  Manager.cc  Manager.h  MathStructure.cc  MathStructure.h  Matrix.cc  Matrix.h  Number.cc  Number.h  Prefix.cc  Prefix.h  Unit.cc  Unit.h  Variable.cc  Variable.h  includes.h  qalculate.h  util.cc  util.h
src/calclib/data/: Makefile.am  datacollections.xml.in  datasets.xml.in  elements.xml.in  functions.xml  functions.xml.in  planets.xml  prefixes.xml  prefixes.xml.in  units.xml  units.xml.in  variables.xml  variables.xml.in
src/libqalculate/: .cvsignore  BuiltinFunctions.cc  BuiltinFunctions.h  Calculator.cc  Calculator.h  DataSet.cc  DataSet.h  ExpressionItem.cc  ExpressionItem.h  Function.cc  Function.h  Makefile.am  MathStructure.cc  MathStructure.h  Number.cc  Number.h  Prefix.cc  Prefix.h  Unit.cc  Unit.h  Variable.cc  Variable.h  includes.h  libqalculate.pc.in  qalculate.h  support.h  util.cc  util.h
src/libqalculate/data/: datasets.xml.in  elements.xml.in  functions.xml.in  planets.xml  planets.xml.in  prefixes.xml.in  variables.xml.in
