dnl
dnl configure.in for qalculate
dnl

dnl  ----------------------
dnl | initialize autotools |---------------------------------------------------
dnl  ----------------------

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(qalculate-gtk, 0.6pre1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl  -------------------------------
dnl | check for neccessary programs |------------------------------------------
dnl  -------------------------------

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_LIBTOOL
AC_PROG_INTLTOOL

dnl  ------------------------------------
dnl | check for compiler characteristics |-------------------------------------
dnl  ------------------------------------

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
    *[\ \	]-Wall[\ \	]*) ;;
    *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

dnl  --------------------------------
dnl | check for neccessary libraries |-----------------------------------------
dnl  --------------------------------

AC_CHECK_LIB(pthread, pthread_create, [LIBS="$LIBS -lpthread"])

PKG_CHECK_MODULES(PACKAGE, [
	gtk+-2.0
	gdk-pixbuf-2.0
	libglade-2.0
	libxml-2.0
	])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

LIBGNOME_REQUIRED=2.0.0

PKG_CHECK_MODULES(GNOME_UTILS, libgnome-2.0 >= $LIBGNOME_REQUIRED, [
	AC_SUBST(GNOME_UTILS_CFLAGS)
	AC_SUBST(GNOME_UTILS_LIBS)
	AC_DEFINE(HAVE_LIBGNOME,1,[If libgnome is available])
], AC_MSG_WARN([libgnome-2.0 was not found. The manual will not be accessible from within Qalculate!]))

dnl ********************
dnl scrollkeeper checks
dnl ********************

AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
if test x$SCROLLKEEPER_CONFIG = xno; then
  AC_MSG_ERROR(Couldn't find scrollkeeper-config. Please install the scrollkeeper package)
fi


dnl  --------------------------------
dnl | check for GMP and GIAC        |-----------------------------------------
dnl  --------------------------------

dnl AC_CHECK_LIB(gmp, __gmpz_init, , [AC_MSG_ERROR([GNU MP not found, see http://swox.com/gmp])])

AC_LANG([C++])

AC_PATH_CLN(1.1.0, [
     	LIBS="$LIBS $CLN_LIBS"
     	CPPFLAGS="$CPPFLAGS $CLN_CPPFLAGS"
  	AC_DEFINE(HAVE_LIBCLN,1,[If CLN can be used])
], AC_MSG_ERROR([No suitable installed version of CLN could be found.]))

dnl AC_CHECK_LIB(giac, main, [
dnl	LIBS="$LIBS -lgiac"
dnl	AC_DEFINE(HAVE_GIAC,1,[If giac can be used])
dnl], AC_MSG_ERROR([No suitable installed version of giac could be found.]))


dnl  -------------------------------------
dnl | internationalization (i18n) support |------------------------------------
dnl  -------------------------------------

GETTEXT_PACKAGE=qalculate-gtk
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The package name for gettext])

dnl Please keep this in alphabetical order
ALL_LINGUAS="sv"
AM_GLIB_GNU_GETTEXT

dnl AM_GLIB_GNU_GETTEXT sets $DATADIRNAME
AC_MSG_CHECKING(locale directory)
if test "x$prefix" = "xNONE"; then
  PACKAGE_LOCALE_DIR=$ac_default_prefix/share/locale
else
  PACKAGE_LOCALE_DIR=$prefix/share/locale
fi

AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "$PACKAGE_LOCALE_DIR",
	[The directory in which qalculate's locale data will be stored])
	 AC_MSG_RESULT("$PACKAGE_LOCALE_DIR")

dnl  --------
dnl | output |-----------------------------------------------------------------
dnl  --------

AC_OUTPUT([
  Makefile
  data/Makefile
  doc/Makefile  
  doc/C/Makefile
  src/Makefile
  src/calclib/Makefile
  src/calclib/data/Makefile  
  po/Makefile.in
])

